--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         -moz-box-sizing: border-box;
         -webkit-print-color-adjust: exact;
         -webkit-min-device-pixel-ratio: 0;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
       }
 
       :root {
@@ -40,7 +41,7 @@
       h2,
       h3,
       h4 {
-        font-size: 35px;
+        font-size: 25px;
         color: var(--primary-color);
       }
 
@@ -70,9 +71,9 @@
 
       .container h5 {
         text-align: center;
-        padding-top: 3.4cm;
+        padding-top: 3.5cm;
         color: var(--primary-color);
-        font-size: 40px;
+        font-size: 30px;
       }
 
       .fire {
@@ -84,12 +85,12 @@
       .fire h3,
       .fire h4 {
         color: orangered;
-        font-size: 30px;
+        font-size: 20px;
       }
 
       .fire h5 {
         color: orangered;
-        font-size: 35px;
+        font-size: 25px;
       }
 
       .box-1 {
