--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       }
 
       .box-17 {
-        background: url("./img/fire/Leonidas.jpg") no-repeat center center/cover;
+        background: url("./img/fire/Leonidas.jpg") no-repeat center 10% / cover;
       }
 
       .box-18 {
