--- a/index.html
+++ b/index.html
@@ -170,8 +170,7 @@
       }
 
       .box-18 {
-        background: url("./img/fire/Cerberus.jpeg") no-repeat center
-          center/cover;
+        background: url("./img/fire/Cerberus.jpeg") no-repeat 90% center/cover;
       }
 
       .box-19 {
