--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+      integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+      crossorigin="anonymous"
+    />
     <title>Page 3</title>
     <style>
       * {
@@ -247,6 +253,31 @@
       .box-36 {
         background: url("./img/fire/fire13.jpg") no-repeat center center/cover;
       }
+
+      .arrow-34,
+      .arrow-54 {
+        background: transparent;
+        position: absolute;
+        top: 40%;
+        left: 42%;
+        color: darkorchid;
+        font-size: 30px;
+      }
+      .arrow-114,
+      .arrow-119,
+      .arrow-124,
+      .arrow-128,
+      .arrow-132,
+      .arrow-135,
+      .arrow-138,
+      .arrow-140 {
+        background: transparent;
+        position: absolute;
+        top: 40%;
+        left: 42%;
+        color: orangered;
+        font-size: 30px;
+      }
     </style>
   </head>
   <body>
@@ -258,6 +289,7 @@
         <h4>31</h4>
       </div>
       <div class="box box-2">
+        <i class="fas fa-arrow-down arrow-34"></i>
         <h1>34</h1>
         <h2>34</h2>
         <h3>34</h3>
@@ -312,6 +344,7 @@
         <h5>53</h5>
       </div>
       <div class="box box-12">
+        <i class="fas fa-arrow-up arrow-34"></i>
         <h5>54</h5>
       </div>
       <div class="box box-13">
@@ -336,6 +369,7 @@
         <h4>121</h4>
       </div>
       <div class="box box-17 fire">
+        <i class="fas fa-arrow-down arrow-124"></i>
         <h1>124</h1>
         <h2>124</h2>
         <h3>124</h3>
@@ -366,6 +400,7 @@
         <h4>136</h4>
       </div>
       <div class="box box-22 fire">
+        <i class="fas fa-arrow-right arrow-140"></i>
         <h1>140</h1>
         <h2>140</h2>
         <h3>140</h3>
@@ -376,6 +411,7 @@
         <h5>113</h5>
       </div>
       <div class="box box-24 fire">
+        <i class="fas fa-arrow-up arrow-114"></i>
         <h5>114</h5>
       </div>
       <div class="box box-25 fire">
@@ -385,6 +421,7 @@
         <h5>117</h5>
       </div>
       <div class="box box-27 fire">
+        <i class="fas fa-arrow-left arrow-119"></i>
         <h5>119</h5>
       </div>
       <div class="box box-28 fire">
@@ -403,6 +440,7 @@
         <h5>126</h5>
       </div>
       <div class="box box-33 fire">
+        <i class="fas fa-arrow-right arrow-128"></i>
         <h5>128</h5>
       </div>
       <div class="box box-34 fire">
@@ -412,6 +450,7 @@
         <h5>131</h5>
       </div>
       <div class="box box-36 fire">
+        <i class="fas fa-arrow-up arrow-132"></i>
         <h5>132</h5>
       </div>
     </div>
